# configdiff

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configdiff/: __init__.py  __main__.py
configdiff/cli/: app.py
configdiff/diff_engine/: __init__.py  engine.py  models.py
configdiff/output/: __init__.py  base.py  json_output.py  text.py  yaml_output.py
configdiff/parsers/: __init__.py  base.py  ini_parser.py  json_parser.py  registry.py  toml_parser.py  yaml_parser.py
configdiff/utils/: format_detection.py  logging.py
examples/: after.json  after.yaml  before.json  before.yaml
tests/: conftest.py  generate_report.py  test_cli.py  test_determinism.py  test_diff_engine.py  test_edge_cases.py  test_golden.py  test_output.py  test_parsers.py  test_performance.py  test_property_based.py  test_realworld_datasets.py
tests/datasets/ansible/: after.yaml  before.yaml
tests/datasets/deeply_nested/: after.json  before.json
tests/datasets/edge_cases/: malformed.json  malformed.yaml  mixed_types.json  mixed_types_changed.json  nulls.json  nulls_modified.json  special_chars.yaml  special_chars_modified.yaml
tests/datasets/helm/: after.yaml  before.yaml
tests/datasets/kubernetes/: after.yaml  before.yaml
tests/datasets/large/: after.json  before.json
tests/datasets/network/: after.json  before.json
tests/datasets/order_variant/: after.json  after.yaml  before.json  before.yaml
tests/datasets/small/: after.ini  after.json  after.toml  after.yaml  before.ini  before.json  before.toml  before.yaml
tests/datasets/terraform/: after.json  before.json
tests/fixtures/: sample.ini  sample.json  sample.toml  sample.yaml
tests/golden/: empty_no_changes.json  kubernetes_deployment.json  null_handling.json  small_json_diff.json  type_changes.json
